--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -23,7 +23,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
-      - name: Build and push Docker images  
+      - name: Docker Login
         uses: docker/login-action@v2.0.0
         with:
           username: ${{secrets.DOCKERHUB_USER}}
@@ -38,3 +38,20 @@ jobs:
           tags: |
             saiwmon/kube-news:latest
             saiwmon/kube-news:${{github.run_number}}
+            
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Kubernetes Set Context
+        uses: Azure/k8s-set-context@v2
+        with:
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+          
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v3.1
+        with:
+          images: saiwmon/kube-news:${{github.run_number}}
+          manifests: ./k8s/deployment.yaml
